# llm-slot-filling

./: .gitignore  LICENSE  README.md  chat.py  pyproject.toml
app/: prompt.py  slot_filling_conversation.py  slot_memory.py
